[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = {version="2.0.0", features=["postgres", "r2d2"]}
dotenvy = "0.15"
serde = "1.0.152"
rocket_cors = "0.5.1"
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "serve"]
[dependencies.rocket_dyn_templates]
features = ["handlebars"]